--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,8 @@ on:
 # SET CRON TIME
 # See here for more detail about cron: https://crontab.guru/examples.html
 
-  #schedule:
-   # - cron: '0 4 * * *' # Default: run at 00:00 everyday
+  schedule:
+    - cron: '0 8 * * *' # Default: run at 00:00 everyday
 
 # TRIGGER ON PUSH / PULL
 
